refactor: Video Call에 대한 파일 이름 수정
- 'SiganlHandler'에서 'VideoHandler'로 변경
- WebSocket URL을 'ws://localhost:8080/siganl' 에서 'ws://localhost:8080/api/video'로 변경

--- a/src/main/resources/templates/video/index.html
+++ b/src/main/resources/templates/video/index.html
@@ -95,7 +95,7 @@
             startCallBtn.disabled = true;
             endCallBtn.disabled = false;
 
-            socket = new WebSocket('ws://localhost:8080/signal');
+            socket = new WebSocket('ws://localhost:8080/api/video');
             socket.onopen = handleSocketOpen;
             socket.onmessage = handleSocketMessage;
             socket.onclose = handleSocketClose;
